[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temu_monitor"
version = "0.1.0"
description = "Temu Monitor System"
authors = [{ name="Your Name", email="your.email@example.com" }]
dependencies = [
    "playwright",
    "fpdf2",
    "matplotlib",
    "jinja2",
    "weasyprint"
]

[project.entry-points.console_scripts]
temu-monitor = "temu_monitor.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true






